# finance_project

./: README.md  pyproject.toml
accounts/: models.py
accounts/migrations/: 0001_initial.py
finance_project/: settings.py  urls.py
finance_project/config/: development.py  production.py
finance_project/templates/: main.html
transactions/: models.py
transactions/migrations/: 0001_initial.py
users/: models.py
users/migrations/: 0001_initial.py
