[tool.poetry]
name = "finance-project"
version = "0.1.0"
description = ""
authors = ["kimroha <doboduu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.2"
django-rest-framework = "^0.1.0"
psycopg2 = "^2.9.10"


[tool.poetry.group.dev.dependencies]
drf-spectacular = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
